service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicschool-cml-load-balancer
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  selector:
    app: musicschool-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 34.19.103.158
