ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicschool-cml-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: musicschool-cml-api-ip
spec:
  ingressClassName: gce
  rules:
  - host: musicschool-cml.jeschek-apis.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: musicschool-cml-load-balancer
            port:
              number: 80
  tls:
  - hosts:
    - musicschool-cml.jeschek-apis.dev
    secretName: musicschool-cml-tls
